--- a/web/.project
+++ b/web/.project
@@ -33,4 +33,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>WebContent/WEB-INF/lib</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/lib</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
