Share TradingStrategy between projects
We want the students to be submitting the TradingStrategy, so don't want
two copies hanging around. Both the CLI and web versions use it, but we
keep the projects separate in case the web version doesn't work locally

--- a/web/.project
+++ b/web/.project
@@ -35,6 +35,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>src/trading</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/cli/src/trading</locationURI>
+		</link>
+		<link>
 			<name>WebContent/WEB-INF/lib</name>
 			<type>2</type>
 			<locationURI>PARENT-1-PROJECT_LOC/lib</locationURI>
